style(clang-format): add `.clang-format` patch
The `tf-a-sync-code-style` OpenCI job applies this patch to the
`.clang-format` file used by the Linux kernel project to generate
TF-A's own code style configuration.

Change-Id: I4df42cfc6ed5ac91221fe141474d130d6b1c7677
Signed-off-by: Chris Kay <chris.kay@arm.com>

--- a/changelog.yaml
+++ b/changelog.yaml
@@ -1233,6 +1233,9 @@ subsections:
   - title: Tools
 
     subsections:
+      - title: Clang-Format
+        scope: clang-format
+
       - title: STM32 Image
         scope: stm32image
 
